@@ -8,6 +8,7 @@ libc_hidden_proto (sigemptyset)
 libc_hidden_proto (sigfillset)
 libc_hidden_proto (sigismember)
 libc_hidden_proto (__sigpause)
+libc_hidden_proto (raise)
 
 /* Now define the internal interfaces.  */
 extern __sighandler_t __bsd_signal (int __sig, __sighandler_t __handler);
